# Othello_Project

./: README.md  experiment.py  main.py  pyproject.toml
ai/: PlayerML.py  PlayerMinimax.py  PlayerRandom.py  ml_utils.py  new_nn_utils.py
db/: NNstorage.py  stored-networks
game/: Board.py  GameEngine.py  OthelloGame.py  Player.py  PlayerHuman.py  PlayerML.py  PlayerMinimax.py  PlayerRandom.py
gui/: ClickableIcon.py  GameTab.py  MainMenu.py  ManagerUI.py  MenuTab.py  WindowUI.py  WindowUtils.py
report/INFO-H410_Project/: main.tex
src/ai/: PlayerML.py  PlayerMinimax.py  PlayerRandom.py
src/db/: NNstorage.py  stored-networks
src/game/: GameEngine.py  OthelloGame.py  PlayerHuman.py
src/gui/: GameTab.py  ManagerUI.py  MenuTab.py
