[tool.poetry]
name = "Othello"
version = "0.1.0"
description = ""
authors = ["Pardon Mathieu, Wafflard Guillaume, Diaz Y Suarez Esteban"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.6"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
